@startuml

title __CRICKETAPPLICATION's Class Diagram__\n

  namespace com.avinash.cricketScoreboard {
    class com.avinash.cricketScoreboard.CricketMatch {
    }
  }
  

  namespace com.avinash.cricketScoreboard {
    class com.avinash.cricketScoreboard.Player {
    }
  }
  

  namespace com.avinash.cricketScoreboard {
    class com.avinash.cricketScoreboard.Team {
    }
  }
  

  namespace com.avinash.helper {
    class com.avinash.helper.InputScanner {
    }
  }
  

  namespace com.avinash.helper {
    class com.avinash.helper.Validations {
    }
  }
  

  com.avinash.cricketScoreboard.CricketMatch o-- com.avinash.cricketScoreboard.Team : team1
  com.avinash.cricketScoreboard.CricketMatch o-- com.avinash.cricketScoreboard.Team : team2
  com.avinash.cricketScoreboard.Team o-- com.avinash.cricketScoreboard.Player : nonstrikerPlayer
  com.avinash.cricketScoreboard.Team o-- com.avinash.cricketScoreboard.Player : strikerPlayer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
